kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/wiating-devops-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - image: merito123/wiating_devops-app:05032023_2045
          args:
            - uvicorn
            - wiating_backend.main:app
            - --reload
            - --log-level
            - trace
            - --host
            - 0.0.0.0
            - --port
            - "5000"
          name: app
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /images
              name: images
      restartPolicy: Always
      volumes:
        - name: images
          persistentVolumeClaim:
            claimName: images
status: {}
