kubernetes/image-resizer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: image-resizer
  name: image-resizer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: image-resizer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/wiating-devops-default: "true"
        io.kompose.service: image-resizer
    spec:
      containers:
        - args:
            - python3
            - -m
            - celery
            - -A
            - image_resizer
            - worker
            - --loglevel=info
          image: image-resizer
          name: image-resizer
          resources: {}
          volumeMounts:
            - mountPath: /images
              name: images
      restartPolicy: Always
      volumes:
        - name: images
          persistentVolumeClaim:
            claimName: images
status: {}
