kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "5813"
      port: 5813
      targetPort: 5000
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
