kubernetes/wiating-devops-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: wiating-devops-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/wiating-devops-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/wiating-devops-default: "true"
